# pirlygenes

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  conftest.py  deploy.sh  develop.sh  format.sh  lint.sh  pyproject.toml  requirements.txt  test.sh
.github/workflows/: tests.yml
analyses/: APD1_TMB_POPULATION_AUDIT.md  _apd1_factors.py  _panels.py  _run_layout.py  antigen_or_suppression_score.py  apd1_causal_factors.py  apd1_exclusion_scatters.py  apd1_ici_factor_contributions.py  apd1_landscape.py  apd1_mechanism_screen.py  apd1_response_plots.py  cta_addressable_burden.py  cta_covering_set.py  cta_curation_figures.py  cta_expression_heatmaps.py  cta_patient_counts.py  exclusion_vs_apd1.py  ici_landscape.py  inhibitor_candidates_vs_ici.py  placental_immune_privilege.py  regen_apd1_figures.py  regenerate_plots.py  suppressor_genes_vs_apd1.py
analyses/outputs/: _apd1_causal_factors.csv  _apd1_gene_screen.csv  _apd1_mechanism_screen.csv  _cta_patient_counts.csv  _cta_union_counts.csv  cta_breadth_median.csv  cta_breadth_q1.csv  cta_breadth_q3.csv  cta_covering_set.md  cta_expression_long.csv  cta_expression_summary.md  cta_maxcta_median.csv  cta_maxcta_q1.csv  cta_maxcta_q3.csv  cta_median.csv  cta_missing_cells.csv  cta_patient_counts.csv  cta_q1.csv  cta_q3.csv  cta_size_median.csv  cta_size_q1.csv  cta_size_q3.csv  cta_specific_9mers.csv  cta_union_counts.csv
docs/: analyze-api.md  analyze-command.md  cancer-classification-ontology.md  cancer-type-ontology-audit.md  cta-curation.md  design-cohort-heterogeneity-and-hypothesis-ledger.md  embedding-gene-selection.md  expression-data-audit.md  expression-data-refresh-plan.md  expression-sources-per-code.md  figure-audit.md  gene-canonicalization.md  gene-sets.md  lineage-aware-decomposition.md  normalization-and-mapping-audit.md  phase-c-deploy-checklist.md  plan-4.0-decomposition.md  reasoning-pipeline.md  recount3-integration.md  reference-expression-delegation-557.md  reference-expression-parity.md  stage0-reasoning.md  step0-reasoning.md
docs/archive/: README.md  cancer-type-ontology-audit-2026-05.md  expression-sources-per-code-2026-05.md
memory/: MEMORY.md  project_apd1_and_cohort_hunt.md  project_proteoform_identifier_scheme.md  project_taxonomy_groupings_and_union_C.md
notebooks/: ADC-trials.csv  Import ADC trials CSV.ipynb  PanCancer_ADC_trials_supp5.csv  ewsr1-fli1-ct-genes-hpa.ipynb
old-analyses/outputs/: _cta_symbols.txt  _per_sample_pctile_cutoffs.parquet  cta_maxcta_q3.csv  (+4 more)
pfo002/: BG002179-H37-H37002.pmhcs.read_counts.agreto.ccfs.ervs.ctas.prtzd.tsv  BG004281-H37-H37002.pmhcs.read_counts.agreto.ccfs.ervs.ctas.prtzd.tsv  Gene.csv  H37-H37002-BG002179-ar-BG002179.quant.sf.csv  H37-H37002-BG004281-ar-BG004281.quant.sf.csv  H37002.gene_counts.tsv  pfo002-psnld-gene-expression.xlsx
pirlygenes/: PLAN-1.4.0-radioligand.md  __init__.py  aggregate_gene_expression.py  alteration_effects.py  alterations.py  brief.py  cancer_data.py  cli.py  cohort_deconvolve.py  cohorts.py  common.py  confidence.py  coverage.py  cta_curation_plots.py  data_bundle.py  data_inventory.py  degenerate_subtype.py  disease_state_rules.py  downloads.py  expression_qc.py  format.py  fusion_effects.py  fusions.py  gene_aliases.py  gene_canonicalization.py  gene_display_names.py  gene_expression.py  gene_families.py  gene_ids.py  gene_names.py  gene_sets.py  gene_sets_cancer.py  gene_sets_old.py  healthy_vs_tumor.py  hla.py  load.py  load_dataset.py  load_expression.py  plot.py  plot_data_helpers.py  (+23 more)
reports/: cross-modality-target-report-2026-04.md
scripts/: audit_citations.py  audit_therapy_path_curation.py  backfill_tumor_origin.py  bake_canonical_reference_expression_artifacts.py  build_beataml_reference_expression.py  build_bl_gdc_reference_expression.py  build_chon_reference_expression.py  build_chordoma_gse239531_reference_expression.py  build_cllmap_reference_expression.py  build_ctcl_scrna_reference_expression.py  build_geo_heme_reference_expression.py  build_geo_matrix.py  build_gpl570_microarray.py  build_gse75885_sarc_reference_expression.py  build_gse98894_midgut_net.py  build_lnen_drmetrics_reference_expression.py  build_mbl_subgroups_marker_classifier.py  build_mmrf_reference_expression.py  build_ne_per_sample_parquets.py  build_nutm_tempus.py  build_pannet_reference_expression.py  build_recount3_source.py  build_sclc_reference_expression.py  build_sclc_subtypes_tf_dominance.py  build_target_all_reference_expression.py  build_target_subprojects.py  build_tcga_coadread_msi_split.py  build_tcga_stad_subtype_split.py  build_tcga_ucec_subtype_split.py  build_treehouse_reference_expression.py  build_v5_5_microarray_cohorts.py  compare_oncoref_pirlygenes.py  enrich_cancer_marker_panels.py  generate_cancer_lineage_panels.py  generate_cancer_ontology.py  generate_cancer_taxonomy_panels.py  generate_cancer_type_biology_columns.py  generate_canonical_gene_reference.py  generate_cdna_identical_groups.py  generate_censored_gene_reference.py  (+38 more)
tests/: conftest.py  test_aggregate_gene_expression.py  test_analyze_api.py  test_analyze_redundancy.py  test_apd1_analysis_crc_pooling.py  test_apd1_ici_factor_contributions.py  test_apl_subtype_key_genes.py  test_battery_audit_fixes.py  test_biliary_expression_discriminators.py  test_brief.py  test_build_treehouse.py  test_builders_oncoref_delegation.py  test_builders_parsers.py  test_cancer_apd1_response.py  test_cancer_burden.py  test_cancer_frameshift_burden.py  test_cancer_fusions.py  test_cancer_subtype_groupings.py  test_cancer_tmb.py  test_cancer_type_context.py  test_cancer_type_registry.py  test_cancer_types.py  test_cancer_viral_antigens.py  test_citation_integrity.py  test_clean_tpm_shared.py  test_clean_tpm_v5_cap.py  test_cli_narrative.py  test_cli_output_cleanup.py  test_cohort_aggregates.py  test_cohort_deconvolve.py  test_cohort_expression_views.py  test_cohort_gene_percentiles.py  test_cohort_registry.py  test_cohorts_registry.py  test_common_gene_names.py  test_confidence.py  test_coverage.py  test_cta_curation_plots.py  test_decomposition.py  test_decomposition_internals.py  (+91 more)
(+376 files in other folders)
