[project]
name = "pirlygenes"
requires-python = ">=3.9"
authors = [ {name="Alex Rubinsteyn", email="alex.rubinsteyn@unc.edu" } ]
description = "Curated cancer gene sets and reference expression data. Analysis lives in `trufflepig`."
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=2.0.0",
    # oncoref owns the cancer-type ontology/registry (single source of truth);
    # pirlygenes re-exports it via load_dataset (pirlygenes#523 / oncoref#275).
    # Floor 1.8.98: its registry is a superset of every code pirlygenes
    # previously shipped (incl. ASTB, oncoref #223) AND it ships the
    # median-of-ratios housekeeping normalization pirlygenes delegates to
    # (oncoref #204 / #516). 1.8.95 adds the ontology_level/ontology_kind
    # columns and reparents CRC_MSI under CRC (oncoref #322/#323); 1.8.103
    # (#325/#326) finishes the aggregate tier wiring — the intermediate SARC
    # histology rollups (SARC_LPS/ESS/RMS) and NEC_LUNG become type-level
    # computed_union tiers. 1.8.107 restructures the neuroendocrine / renal /
    # thymic taxonomy: NEN/RCC/THYM_EPITHELIAL added as grouping unions
    # (NEN -> NET/NEC, RCC -> KIRC/KIRP/KICH/RCC_NCC, THYM_EPITHELIAL ->
    # THYM/THYMCA) and NEN_G3_EXTRAPULMONARY renamed to NEN_EXTRAPULMONARY_HG.
    # The grouping-signal tests + registry-completeness baseline gate on
    # ontology_level=='grouping' (auto-exempt) so this taxonomy churn no longer
    # needs a frozenset edit per release (see tests/test_registry_completeness.py
    # and tests/test_ontology_level_groupings.py).
    # 1.8.125 completes the cancer_reference_expression compatibility contract
    # used by pirlygenes' delegated read path (#557): source-union summaries,
    # pirlygenes gene-ID/universe views, provenance, pooling, and identical-locus
    # collapse, including compact pirlygenes proteoform IDs and n_detected-safe
    # source-union collapse. 1.8.124 indexes reference-summary rows by cohort so
    # filtered calls do not repeatedly scan the full frame. The current 1.8.134
    # floor also includes 1.8.130's canonical SARC-histology labels before source
    # filtering, so exact cohort filters and their availability metadata share one
    # upstream identity. 1.8.134 adds the compact all-source availability manifest
    # used here without loading the multi-million-row expression table. >=1.8.75
    # also gives the
    # builders the cleaned-up source-matrix QC /
    # mapping-audit / parse-diagnostics contract they delegate to — Entrez
    # resolver (#293) + un-versioned QC contract with configurable HK floor +
    # proxy warn-only (#292); see pirlygenes#526 (satisfied by 1.8.98).
    # 1.8.98 also serves the representative/percentile accessors pirlygenes
    # delegates in #208 (representative_cohort_samples with
    # representative_id_style/sample_qc='artifact', available_representative_
    # cohorts, available_percentile_cohorts, cohort_gene_percentiles).
    "oncoref>=1.8.134",
    "openpyxl>=3.1.0",
    "pandas>=2.0",
    # Parquet engine for the cohort-view / representative / percentile
    # artifacts (pd.read_parquet). Present transitively today via
    # pyensembl→gtfparse, but declared directly since pirlygenes reads parquet
    # in several modules and must not break if that chain changes (#474 review).
    "pyarrow>=10",
    "pyensembl>=2.6.0",
    "PyYAML>=6.0",
    "tqdm",
    # The CTA gene set is owned by oncoref (#511); pirlygenes still re-exports
    # tsarina's CTA_evidence() (for the ms_* mass-spec safety layer oncoref does
    # not carry) and CTA_partition* (no bundled CTA snapshot to drift). 1.23.1
    # (PR#142/#141) converges tsarina's default set onto oncoref's, so the
    # evidence rows line up with oncoref's set — pin it so the join stays
    # aligned. (#289/#290/#291, #546)
    "tsarina>=1.23.1",
]

[tool.setuptools.dynamic]
version = {attr = "pirlygenes.version.__version__"}

[tool.setuptools.packages.find]
include = ["pirlygenes*"]

# Disable VCS auto-discovery of files. Without this, setuptools defaults
# to include_package_data=True when git is detected, which auto-ships
# every git-tracked file and IGNORES the package-data positive list
# below — that's how the 5.3.0 wheel ballooned to 331 MB before we
# caught it. Forcing False makes the package-data list authoritative.
[tool.setuptools]
include-package-data = false

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
# Optional plotting extras. matplotlib is a core dep; matplotlib_venn is only
# needed for the CTA source-overlap venn (pirlygenes plot cta-curation), which
# otherwise degrades to a source-size bar.
viz = [
    "matplotlib_venn>=1.0",
]
[project.urls]
"Homepage" = "https://github.com/pirl-unc/pirlygenes"
"Bug Tracker" = "https://github.com/pirl-unc/pirlygenes"

# Shim that prints a "moved to trufflepig" message and exits 2. Keeps
# `pirlygenes` on PATH from breaking with `command not found` for users
# whose CI/batch jobs still invoke the old analyze CLI. See pirlygenes/cli.py.
[project.scripts]
pirlygenes = "pirlygenes.cli:main"

[build-system]
# setuptools-scm was removed in v5.3.0 because it was auto-including
# every git-tracked file in the wheel, which overrode our explicit
# exclude-package-data rules and pushed the wheel past PyPI's 100 MiB
# limit. Version comes from pirlygenes/version.py via the
# [tool.setuptools.dynamic] attr lookup, so scm isn't needed.
requires = ["setuptools>=60"]

[tool.setuptools.package-data]
# Only small curated panels ship in the wheel. Empirical per-cohort summary rows
# are owned/fetched by oncoref (#557); pirlygenes' remaining precomputed views,
# pan-cancer matrix, and HPA cell-type matrix come from its versioned data bundle.
# See pirlygenes/data_bundle.py.
pirlygenes = [
    "data/*.csv",            # small curated panels (cancer-key-genes, CTAs, etc.)
    "data/*.csv.gz",         # samples manifest + small generated pan-rollup artifact
    "data/*.yaml",           # expression_sources.yaml
]

# What we deliberately DO NOT ship in the wheel:
#   data/cancer-reference-expression/*                  build/audit inputs;
#                                                       runtime owned by oncoref
#   data/cancer-reference-expression-views/*            precomputed views
#   data/pan-cancer-expression.csv                       ~11 MB
#   data/hpa-cell-type-expression.csv                    ~7 MB
# (The last three paths are fetched by pirlygenes.data_bundle. Per-cohort
# summary rows, medoid representatives, and percentile vectors are fetched by
# oncoref; pirlygenes no longer has a duplicate summary-row runtime path.)
[tool.setuptools.exclude-package-data]
pirlygenes = [
    "data/cancer-reference-expression/*",
    "data/cancer-reference-expression-views/*",
    "data/pan-cancer-expression.csv",
    "data/hpa-cell-type-expression.csv",
]

[tool.pytest.ini_options]
addopts = "-n auto"
markers = [
    "perf: performance-regression fences",
]
